--- a/compare-text.html
+++ b/compare-text.html
@@ -215,24 +215,24 @@
         <!-- SEO Content -->
         <div class="seo-container">
             <h2>What Is a Text Difference Checker?</h2>
-            <p>A <strong>text difference checker</strong> (also called a diff tool or <strong>online difference checker</strong>) is a utility that compares two blocks of text or code and highlights the differences between them. It identifies which lines have been added, removed, or changed, making it easy to spot modifications at a glance. Whether you're comparing documents, reviewing code changes, or checking revisions, a <strong>text difference checker</strong> saves hours of manual comparison.</p>
+            <p>A text difference checker (also called a diff tool or online difference checker) is a utility that compares two blocks of text or code and highlights the differences between them. It identifies which lines have been added, removed, or changed, making it easy to spot modifications at a glance. Whether you're comparing documents, reviewing code changes, or checking revisions, a text difference checker saves hours of manual comparison.</p>
 
             <h2>How to Compare Text Online</h2>
-            <p>Using our free <strong>text comparison tool</strong> is simple and takes just a few steps:</p>
+            <p>Using our free text comparison tool is simple and takes just a few steps:</p>
             <ol>
-                <li><strong>Paste or upload</strong> your original text in the left editor box.</li>
-                <li><strong>Paste or upload</strong> the changed version in the right editor box.</li>
-                <li>Click the <strong>"Find Differences"</strong> button.</li>
+                <li>Paste or upload your original text in the left editor box.</li>
+                <li>Paste or upload the changed version in the right editor box.</li>
+                <li>Click the "Find Differences" button.</li>
                 <li>Review the color-coded results: green for additions, red for removals.</li>
-                <li>Toggle between <strong>Unified</strong> and <strong>Side-by-Side</strong> views for different perspectives.</li>
+                <li>Toggle between Unified and Side-by-Side views for different perspectives.</li>
             </ol>
-            <p>You can also upload files directly using the upload button on each editor, or use the <strong>Swap</strong> button to reverse the comparison direction.</p>
+            <p>You can also upload files directly using the upload button on each editor, or use the Swap button to reverse the comparison direction.</p>
 
             <h2>Use Cases for Text Comparison</h2>
-            <p>A <strong>text comparison tool</strong> and <strong>code difference tool</strong> are invaluable in many scenarios:</p>
+            <p>A text comparison tool and code difference tool are invaluable in many scenarios:</p>
 
             <h3>Code Review &amp; Development</h3>
-            <p>Developers use diff tools daily to review code changes before merging. Compare your working copy against the original to catch bugs, unintended changes, or missing lines. Our <strong>code difference tool</strong> handles any programming language — JavaScript, Python, HTML, CSS, SQL, and more.</p>
+            <p>Developers use diff tools daily to review code changes before merging. Compare your working copy against the original to catch bugs, unintended changes, or missing lines. Our code difference tool handles any programming language — JavaScript, Python, HTML, CSS, SQL, and more.</p>
 
             <h3>Document Proofreading</h3>
             <p>When editing essays, articles, or reports, compare the original draft with the revised version. Quickly spot what was added, deleted, or reworded without reading both documents line by line.</p>
@@ -247,21 +247,21 @@
             <p>Writers and editors can track changes between article revisions, blog post drafts, or CMS content updates. The diff output clearly shows the evolution of your content over time.</p>
 
             <h2>How the Diff Algorithm Works</h2>
-            <p>Our tool uses a <strong>Longest Common Subsequence (LCS)</strong> algorithm to <strong>find differences between texts</strong>. Here's how it works:</p>
+            <p>Our tool uses a Longest Common Subsequence (LCS) algorithm to find differences between texts. Here's how it works:</p>
             <ol>
                 <li>Both texts are split into individual lines.</li>
                 <li>The algorithm builds a matrix comparing every line from the original against every line in the changed version.</li>
                 <li>It identifies the longest sequence of matching lines (the "common subsequence").</li>
-                <li>Lines not in the common subsequence are classified as either <strong>added</strong> (present only in the changed text) or <strong>removed</strong> (present only in the original).</li>
+                <li>Lines not in the common subsequence are classified as either added (present only in the changed text) or removed (present only in the original).</li>
                 <li>Results are rendered with line numbers and color coding for clarity.</li>
             </ol>
             <p>This approach ensures accurate, line-by-line comparison that handles insertions, deletions, and modifications reliably.</p>
 
             <h2>Comparing Files Online</h2>
-            <p>Need to do <strong>file comparison online</strong>? Our tool supports direct file uploads in numerous formats including <code>.txt</code>, <code>.js</code>, <code>.py</code>, <code>.html</code>, <code>.css</code>, <code>.json</code>, <code>.xml</code>, <code>.md</code>, <code>.csv</code>, and many more. Simply click the upload button on either editor panel, select your file, and the contents will be loaded automatically. You can then <strong>compare files online</strong> instantly — no software installation required.</p>
+            <p>Need to do file comparison online? Our tool supports direct file uploads in numerous formats including <code>.txt</code>, <code>.js</code>, <code>.py</code>, <code>.html</code>, <code>.css</code>, <code>.json</code>, <code>.xml</code>, <code>.md</code>, <code>.csv</code>, and many more. Simply click the upload button on either editor panel, select your file, and the contents will be loaded automatically. You can then compare files online instantly — no software installation required.</p>
 
             <h2>Why Use Our Free Difference Tool</h2>
-            <p>There are many reasons to choose our <strong>free difference tool</strong> over alternatives:</p>
+            <p>There are many reasons to choose our free difference tool over alternatives:</p>
             <ul>
                 <li><strong>100% free</strong> — No registration, no limits, no premium tiers.</li>
                 <li><strong>Privacy-first</strong> — All processing happens in your browser. Your text never leaves your device.</li>
@@ -272,7 +272,7 @@
                 <li><strong>Copy &amp; export</strong> — Copy diff results to clipboard or download your text.</li>
                 <li><strong>Code-ready</strong> — Monospace font, line numbers, and syntax-friendly layout for any programming language.</li>
             </ul>
-            <p>Our <strong>difference checker tool</strong> is designed for speed, accuracy, and ease of use — whether you're a developer, writer, lawyer, or student.</p>
+            <p>Our difference checker tool is designed for speed, accuracy, and ease of use — whether you're a developer, writer, lawyer, or student.</p>
 
             <h2>Frequently Asked Questions About Text Comparison</h2>
 
@@ -307,7 +307,7 @@
             <p>There is no hard limit. The tool runs in your browser, so it can handle texts of any reasonable length. Very large files (over 100,000 lines) may take a moment to process depending on your device's performance.</p>
 
             <h3>What is a unified diff vs side-by-side diff?</h3>
-            <p>A <strong>unified diff</strong> shows all changes in a single column with additions and removals interleaved and color-coded. A <strong>side-by-side diff</strong> displays the original and changed text in two parallel columns, making it easy to compare corresponding lines visually. Both views are available in this tool.</p>
+            <p>A unified diff shows all changes in a single column with additions and removals interleaved and color-coded. A side-by-side diff displays the original and changed text in two parallel columns, making it easy to compare corresponding lines visually. Both views are available in this tool.</p>
 
             <h3>Can I use this tool on mobile?</h3>
             <p>Yes. The tool is fully responsive. On mobile devices, the two editor panels stack vertically for comfortable use, and all features including file upload, copy, and diff views work perfectly on phones and tablets.</p>
