--- a/compare-text/compare-excel.html
+++ b/compare-text/compare-excel.html
@@ -30,7 +30,7 @@
         .excel-wrapper { max-width: 1100px; margin: 0 auto; }
         .drop-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; }
         @media (max-width: 768px) { .drop-grid { grid-template-columns: 1fr; } }
-        .drop-panel { display: flex; flex-direction: column; }
+        .drop-panel { display: flex; flex-direction: column; overflow: auto; }
         .drop-toolbar { display: flex; align-items: center; justify-content: space-between; margin-bottom: 0.5rem; }
         .drop-toolbar h3 { color: white; font-size: 1rem; font-weight: 600; margin: 0; }
         .toolbar-buttons { display: flex; gap: 0.35rem; }
