--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -26,6 +26,8 @@
     <link rel="canonical" href="https://calculations.tools/percentage-calculator">
     <link rel="stylesheet" href="/base.css">
     <script src="/header.js"></script>
+    <script defer src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script defer id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
     <div class="text-center mb-12">
@@ -141,6 +143,64 @@
                     </div>
                 </div>
             </section>
+<style>
+    .seo-content-container {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        line-height: 1.6;
+        color: #333;
+        max-width: 900px;
+        margin: 20px auto;
+        padding: 20px;
+    }
+    .seo-content-container h1, .seo-content-container h2 {
+        color: #1a73e8;
+        border-bottom: 2px solid #e8eaed;
+        padding-bottom: 10px;
+        margin-top: 40px;
+    }
+    .formula-block {
+        background-color: #f8f9fa;
+        border-left: 5px solid #1a73e8;
+        padding: 20px;
+        margin: 20px 0;
+        text-align: center;
+        font-size: 1.2em;
+        overflow-x: auto;
+    }
+    .pro-tip {
+        background-color: #e8f0fe;
+        border-radius: 8px;
+        padding: 15px;
+        border: 1px dashed #1a73e8;
+        margin: 20px 0;
+    }
+    .comparison-table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 20px 0;
+    }
+    .comparison-table th, .comparison-table td {
+        border: 1px solid #ddd;
+        padding: 12px;
+        text-align: left;
+    }
+    .comparison-table th {
+        background-color: #f1f3f4;
+    }
+    .faq-item {
+        margin-bottom: 25px;
+    }
+    .faq-question {
+        font-weight: bold;
+        color: #202124;
+        font-size: 1.1em;
+        display: block;
+        margin-bottom: 8px;
+    }
+    .direct-answer {
+        color: #3c4043;
+    }
+</style>
 <div class="seo-container">
 <article class="seo-content-container">
     <h1>Professional Percentage Calculator: Formulas, Logic, and Examples</h1>
