--- a/info-box.html
+++ b/info-box.html
@@ -1,3 +1,9 @@
 <div class="info-box">
-  <aside></aside>
+  <aside>
+    <img src="/jesper.webp" height="20" width="20" alt="Jesper Pallesen">
+    <div class="author-box">
+    <span class="eyebrow">Created by</span>
+    <a class="author" href="/about-us">Jesper Pallesen</a>
+    </div>
+  </aside>
 </div>
