--- a/word-counter.html
+++ b/word-counter.html
@@ -722,6 +722,10 @@ Speaking time: ${formatTime(stats.speakingTime)}`;
       .then(data => {
         document.body.insertAdjacentHTML('beforeend', data);
       });
+    fetch('/info-box.html')
+      .then(response => response.text())
+      .then(data => {
+        document.body.insertAdjacentHTML('beforeend', data);
     </script>
 </body>
 </html>
