--- a/info-box.html
+++ b/info-box.html
@@ -50,7 +50,7 @@ a.author {
     </div>
   </aside>
 </div>
-<script>
+<script async>
   const date = new Date();
   date.setDate(date.getDate() - 36);
   const formatted = date.toLocaleDateString('en-US', {
