--- a/conversion/currency-converter.html
+++ b/conversion/currency-converter.html
@@ -124,7 +124,7 @@
             }
         }
     </style>
-    <script src="/header.js"></script>
+    <script async src="/header.js"></script>
 </head>
 <body>
     <div class="text-center mb-12">
