--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://calculations.tools">
     <link rel="stylesheet" href="/base.css">
-    <script src="/header.js"></script>
+    <script async src="/header.js"></script>
 </head>
 <body>
     <div class="text-center mb-12">
