--- a/info-box.html
+++ b/info-box.html
@@ -46,7 +46,7 @@ a.author {
     </div>
     <div class="last-updated">
     <span class="eyebrow">Last updated</span>
-    <time id="last-updated"><script>document.write(new Date(new Date().setDate(new Date().getDate() - 36)).toLocaleDateString('en-US', {year:'numeric',month:'long',day:'numeric'}))</script></time>
+    <time id="last-updated"></time>
     </div>
   </aside>
 </div>
