--- a/word-counter.html
+++ b/word-counter.html
@@ -728,5 +728,6 @@ Speaking time: ${formatTime(stats.speakingTime)}`;
         document.body.insertAdjacentHTML('beforeend', data);
     });
     </script>
+    <script async src="/global.js"></script>
 </body>
 </html>
