--- a/week-number.html
+++ b/week-number.html
@@ -978,6 +978,7 @@ weeknum = weekOfYear(today());</code>
             document.body.insertAdjacentHTML('beforeend', data);
           });
     </script>
+    <script async src="/global.js"></script>
     <script type="application/ld+json">
     [
         {
