--- a/week-number.html
+++ b/week-number.html
@@ -972,6 +972,8 @@ weeknum = weekOfYear(today());</code>
             buildWeekTable();
             loadFooter();
         });
+    </script>
+
     <script type="application/ld+json">
     [
         {
