--- a/info-box.html
+++ b/info-box.html
@@ -1,6 +1,5 @@
 <style>
 .info-box {
-    width: 50vw;
     padding: 1.5rem;
     border-radius: 0.5rem;
     background: rgba(255, 255, 255, 0.1);
@@ -30,6 +29,10 @@ span.eyebrow {
 a.author {
     font-size: 14px;
     text-decoration: underline;
+}
+.last-updated time {
+    color: white;
+    font-size: 14px;
 }
 @media (min-width: 1080px) {
 .info-box {
