--- a/info-box.html
+++ b/info-box.html
@@ -4,9 +4,10 @@
     border-radius: 0.5rem;
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.2);
+    margin-top: 1.5rem;
 }
 .info-box aside {
-    display: grid;
+    display: flex;
     gap: 2rem;
     grid-template-columns: auto 1fr;
     position: relative;
@@ -19,7 +20,7 @@
     object-position: top;
     height: 50px;
 }
-.author-box {
+.author-box, .last-updated {
     display: grid;
 }
 span.eyebrow {
