--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <p>&copy; <script>document.write(new Date().getUTCFullYear())</script> calculations.tools. All rights reserved. | <a href="/privacy-policy">Privacy Policy</a></p>
+    <p>&copy; <span id="footer-year"></span> calculations.tools. All rights reserved. | <a href="/privacy-policy">Privacy Policy</a></p>
     <i>Built to help by <a href="https://www.linkedin.com/in/jesperpallesen20/" target="_blank">Jesper Pallesen</a></i>
   </div>
 </footer>
