--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Tools Grid -->
             <section class="calculator-types" aria-label="Available Tools">
                 <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem; color: white; font-weight: 700;">Our Tools</h2>
-                <div class="calculator-grid">
+                <div class="frontpage-grid">
                     <a href="/percentage-calculator" class="calculator-card" style="text-decoration: none; cursor: pointer;">
                         <div class="card-icon basic-icon">%</div>
                         <div class="card-content">
@@ -124,7 +124,7 @@
             <!-- Features Section -->
             <section class="features" aria-label="Features">
                 <h2>Why Choose Calculations.tools?</h2>
-                <div class="features-grid">
+                <div class="frontpage-grid">
                     <div class="feature-card">
                         <div class="feature-icon">⚡</div>
                         <h3>Lightning Fast</h3>
