--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -244,7 +244,14 @@
 </div>
         </div>
     </main>
-<div id="footer-container"></div>
+<script>
+    fetch('/footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.body.insertAdjacentHTML('beforeend', data);
+        document.getElementById('footer-year').textContent = new Date().getUTCFullYear();
+    })
+  </script>
 <script src="script.js"></script>
 <script type="application/ld+json">
 [
