--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -109,12 +109,12 @@
       day: 'numeric'
     });
 
-    // Load footer
     fetch('/footer.html')
       .then(response => response.text())
       .then(data => {
         document.body.insertAdjacentHTML('beforeend', data);
-      });
+        document.getElementById('footer-year').textContent = new Date().getUTCFullYear();
+    })
   </script>
 </body>
 </html>
